fix whitespace

--- a/tinygis/static/tinygis.css
+++ b/tinygis/static/tinygis.css
@@ -1,4 +1,7 @@
-html, body { margin: 0; }
+html, body {
+    margin: 0;
+}
+
 #tinygis-map {
     position: absolute;
     cursor: crosshair;
@@ -9,30 +12,83 @@ html, body { margin: 0; }
     top: 0;
 }
 
-.menu { z-index: 1100; position: absolute; top: 0; right: 0;
-        border: 2px solid #888; border-right: 0; border-top: 0;
-        background: #fff; padding: 5px; }
+.menu {
+    z-index: 1100;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: 2px solid #888; border-right: 0; border-top: 0;
+    background: #fff;
+    padding: 5px;
+}
 
-.identify { z-index: 1100; position: absolute; top: 50px; right: 0;
-            border: 2px solid #888; border-right: 0;
-            background: #fff; }
-.identify-coordinates { margin: 5px; padding: 0; }
-.identify-features { margin: 0; padding: 0; padding-left: 10px; list-style: none; }
-.update-in-progress .identify-features { color: #888; }
-.error-text { color: red; }
+.identify {
+    z-index: 1100;
+    position: absolute;
+    top: 50px;
+    right: 0;
+    border: 2px solid #888; border-right: 0;
+    background: #fff;
+}
 
-.editor { z-index: 1100; position: absolute; top: 150px; right: 0;
-          border: 2px solid #888; border-right: 0;
-          background: #fff; padding: 5px; }
-.editor-features { margin: 0; padding: 0; list-style: none; }
+.identify-coordinates {
+    margin: 5px;
+    padding: 0;
+}
 
-.point-geometry { margin-bottom: 5px; padding: 5px 5px 0; }
-.point-geometry input { font-size: 10px; height: 10px; }
+.identify-features {
+    margin: 0;
+    padding: 0;
+    padding-left: 10px;
+    list-style: none;
+}
 
-.polygon-geometry { margin: 0 0 5px; padding: 5px 5px 0; }
-.polygon-geometry li:last-child { color: #aaa; }
+.update-in-progress .identify-features {
+    color: #888;
+}
 
-.feature-delete i { margin-bottom: -10px; }
+.error-text {
+    color: red;
+}
+
+.editor {
+    z-index: 1100;
+    position: absolute;
+    top: 150px;
+    right: 0;
+    border: 2px solid #888; border-right: 0;
+    background: #fff;
+    padding: 5px;
+}
+
+.editor-features {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.point-geometry {
+    margin-bottom: 5px;
+    padding: 5px 5px 0;
+}
+
+.point-geometry input {
+    font-size: 10px;
+    height: 10px;
+}
+
+.polygon-geometry {
+    margin: 0 0 5px;
+    padding: 5px 5px 0;
+}
+
+.polygon-geometry li:last-child {
+    color: #aaa;
+}
+
+.feature-delete i {
+    margin-bottom: -10px;
+}
 
 #sidebar {
     position: absolute;
@@ -44,6 +100,7 @@ html, body { margin: 0; }
     left: 0;
     top: 0;
 }
+
 #togglebar {
     -webkit-box-shadow: 3px 0px 5px rgba(50, 50, 50, 0.75);
     -moz-box-shadow: 3px 0px 5px rgba(50, 50, 50, 0.75);
@@ -63,6 +120,7 @@ html, body { margin: 0; }
     bottom: 0;
     top: 0;
 }
+
 #togglebar:hover {
     background: #81b8d6;
 }
